# CatchUp

./: CMakeLists.txt  Date.cpp  Date.h  README.md  TreeBuilder.cpp  TreeBuilder.h  TreeEntry.cpp  sampleparsed.txt  test.txt
include/: TreeBuilder.h  TreeEntry.h  TreeFilterer.h  mainwindow.h
overwatchScraper/src/: overwatchPatchScraper.py  patchnotes.txt
src/: Date.cpp  Date.h  TreeBuilder.cpp  TreeBuilder.h  TreeEntry.cpp  TreeEntry.h  TreeFilterer.cpp  TreeFilterer.h  main.cpp  mainwindow.cpp  mainwindow.ui
